--- a/config_defaults.yml
+++ b/config_defaults.yml
@@ -550,9 +550,7 @@ Gemfile:
           - x64_mingw
       # Temporary Pin
       - gem: 'rexml'
-        version: 
-          - '>= 3.0.0'
-          - '< 3.2.7'
+        version: '~> 3.3.3'
     ':development, :release_prep':
       - gem: 'puppet-strings'
         version: '~> 4.0'
